deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: ui-frontend-for-omotebako-mobile
  name: ui-frontend-for-omotebako-mobile
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ui-frontend-for-omotebako-mobile
  strategy:
    rollingUpdate:
  template:
    metadata:
      labels:
        run: ui-frontend-for-omotebako-mobile
    spec:
      hostname: ui-frontend-for-omotebako-mobile
      imagePullSecrets:
        - name: dockerhub
      shareProcessNamespace: true
      volumes:
        - configMap:
            name: envoy-config-omotebako-mobile
          name: envoy
      containers:
        - name: ui-frontend-for-omotebako-mobile
          tty: true
          image: ui-frontend-for-omotebako-mobile
          imagePullPolicy: IfNotPresent
          env:
            - name: REACT_APP_PUBLIC_URL
              value: "http://localhost:4000/"
            - name: REACT_APP_APIURL
              value: "http://localhost:30080/api/"
            - name: REACT_APP_WEB_SOCKET_URL
              value: "ws://localhost:30099/"
            - name: PORT
              value: "4001"
            - name: REACT_APP_IMAGE_PATH
              value: "http://localhost:30080/"
            - name: REACT_APP_GRPCURL
              value: "http://localhost:30050"
          ports:
            - containerPort: 3000
        - args:
            - --config-path /etc/envoy/envoy.yaml
          command:
            - /usr/local/bin/envoy
          image: latonaio/envoy:latest
          imagePullPolicy: IfNotPresent
          name: envoy
          ports:
            - containerPort: 30556
              name: envoy-client
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 64Mi
          volumeMounts:
            - mountPath: /etc/envoy
              name: envoy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ui-frontend-for-omotebako-mobile
  name: ui-frontend-for-omotebako-mobile
spec:
  selector:
    run: ui-frontend-for-omotebako-mobile
  type: ClusterIP
  clusterIP: None
  ports:
    - name: envoy-client
      port: 30556
      protocol: TCP
      targetPort: 30556
    - name: app
      port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 30556
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: service
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: omotebako_smartphone_client
                    http_filters:
                      - name: envoy.router
                        config: { }
      clusters:
        - name: omotebako_smartphone_client
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: omotebako_smartphone_client
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
kind: ConfigMap
metadata:
  name: envoy-config-omotebako-mobile
  namespace: default
---
